@@ -20,57 +20,35 @@
 ### build.gradle.kts (after edit)
 
 ```kotlin
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
-    kotlin("jvm") version "1.8.21"
+    kotlin("jvm") version "1.9.23"
 }
 
 group = "org.example"
 version = "1.0-SNAPSHOT"
 
-val shiratesCoreVersion = "6.0.0"
-val appiumClientVersion = "8.5.1"
-
 repositories {
     mavenCentral()
 }
 
+val shiratesCoreVersion = "6.8.0"
+val appiumClientVersion = "9.1.0"
+
 dependencies {
-    testImplementation(kotlin("test"))
 
     // JUnit 5
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.1")
 
     // Appium
     testImplementation("io.appium:java-client:$appiumClientVersion")
 
     // shirates-core
     testImplementation("io.github.ldi-github:shirates-core:$shiratesCoreVersion")
-
-    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
-    testImplementation("org.apache.logging.log4j:log4j-core:2.20.0")
-
-    // https://mvnrepository.com/artifact/org.slf4j/slf4j-nop
-    testImplementation("org.slf4j:slf4j-nop:2.0.5")
 }
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs = listOf(
-        "--add-exports", "java.desktop/sun.awt.image=ALL-UNNAMED"
-    )
-
-    // Filter test methods
-    val envIncludeTestMatching = System.getenv("includeTestsMatching") ?: "*"
-    val list = envIncludeTestMatching.split(",").map { it.trim() }
-    filter {
-        for (item in list) {
-            println("includeTestMatching($item)")
-            includeTestsMatching(item)
-        }
-    }
 }
 
 kotlin {
